For #7679: fix 1px shift

--- a/form-runner/jvm/src/main/assets/xbl/orbeon/fields-date/fields-date.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/fields-date/fields-date.less
@@ -37,7 +37,7 @@
         .xbl-fr-date {
             input { display: none ; }
             display: inline-block;
-            // No need for a vertical-align here, as .add-on now matches the inputs' height via @fluidControlHeight
+            vertical-align: middle;
             .add-on {
                 border-radius: var(--orbeon-add-on-border-radius);
             }
